--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_form.html
@@ -49,34 +49,28 @@
 					
 					<div class="tab-pane" id="description" role="tabpanel">
 					    <!--  -->
-					    <th:block th:if="${!#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}">
-					        <th:block th:if="${#authorization.expression('hasAuthority(''Salesperson'')')}">
-					            <div th:replace="products/product_description_read_only :: content"></div>
-					        </th:block>    
+					    <th:block th:if="${isReadOnlyForSalesperson}">
+					        <div th:replace="products/product_description_read_only :: content"></div>
 					    </th:block>
-					    <th:block th:if="${#authorization.expression('hasAuthority(''Admin'')') || #authorization.expression('hasAuthority(''Editor'')')}">
+					    <th:block th:unless="${isReadOnlyForSalesperson}">
 					        <div th:replace="products/product_description :: content"></div>
 					    </th:block>
 					</div>
 					
 					<div class="tab-pane" id="images" role="tabpanel">
-					    <th:block th:if="${!#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}">
-						    <th:block sec:authorize="hasAuthority('Salesperson')">
-						        <div th:replace="products/product_images_read_only :: content"></div>
-						    </th:block>
+					    <th:block th:if="${isReadOnlyForSalesperson}">
+						    <div th:replace="products/product_images_read_only :: content"></div>
 					    </th:block>
-					    <th:block th:if="${#authorization.expression('hasAuthority(''Admin'')') || #authorization.expression('hasAuthority(''Editor'')')}">
+					    <th:block th:unless="${isReadOnlyForSalesperson}">
 					        <div th:replace="products/product_images :: content"></div>
 					    </th:block>
 					</div>
 					
 					<div class="tab-pane p-3" id="details" role="tabpanel">
-					    <th:block th:if="${!#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}">
-					        <th:block th:if="${#authorization.expression('hasAuthority(''Salesperson'')')}">
-					            <div th:replace="products/product_details_read_only :: content"></div>
-					        </th:block>    
+					    <th:block th:if="${isReadOnlyForSalesperson}">
+					        <div th:replace="products/product_details_read_only :: content"></div>
 					    </th:block>
-					    <th:block th:if="${#authorization.expression('hasAuthority(''Admin'')') || #authorization.expression('hasAuthority(''Editor'')')}">
+					    <th:block th:unless="${isReadOnlyForSalesperson}">
 						    <div th:replace="products/product_detail :: content"></div>
 						    <div>
 						        <input type="button" class="btn btn-secondary" value="Add More Detail" 
@@ -86,12 +80,10 @@
 					</div>
 					
 					<div class="tab-pane p-3" id="shipping" role="tabpanel">
-					    <th:block th:if="${!#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}">
-					        <th:block th:if="${#authorization.expression('hasAuthority(''Salesperson'')')}">
-					            <div th:replace="products/product_shipping_read_only :: content"></div>
-					        </th:block>    
+					    <th:block th:if="${isReadOnlyForSalesperson}">
+					        <div th:replace="products/product_shipping_read_only :: content"></div>
 					    </th:block>
-					    <th:block th:if="${#authorization.expression('hasAuthority(''Admin'')') || #authorization.expression('hasAuthority(''Editor'')')}">
+					    <th:block th:unless="${isReadOnlyForSalesperson}">
 					        <div th:replace="products/product_shipping :: content"></div>
 					    </th:block>
 					</div>
