--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_overview.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_overview.html
@@ -8,13 +8,10 @@
      <div class="form-group row">
          <label class="col-sm-2 col-form-label">Product Name:</label>
          <div class="col-sm-10">
-             <th:block th:if="${!#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}">
-			     <th:block th:if="${#authorization.expression('hasAuthority(''Salesperson'')')}">
-		             <input type="text" class="form-control" th:field="*{name}" readonly="readonly" />
-		         </th:block>
+             <th:block th:if="${isReadOnlyForSalesperson}">
+		         <input type="text" class="form-control" th:field="*{name}" readonly="readonly" />
 		     </th:block>   
-		     
-		     <th:block th:if="${#authorization.expression('hasAuthority(''Admin'')') || #authorization.expression('hasAuthority(''Editor'')')}">
+		     <th:block th:unless="${isReadOnlyForSalesperson}">
 		         <input type="text" class="form-control" th:field="*{name}" minlength="3" maxlength="256" required />
 		     </th:block>
          </div>
@@ -23,14 +20,11 @@
      <div class="form-group row">
          <label class="col-sm-2 col-form-label">Alias:</label>
          <div class="col-sm-10">
-             <th:block th:if="${!#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}">
-			     <th:block th:if="${#authorization.expression('hasAuthority(''Salesperson'')')}">
-		             <input type="text" class="form-control" th:field="*{alias}" readonly="readonly"
+             <th:block th:if="${isReadOnlyForSalesperson}">
+		         <input type="text" class="form-control" th:field="*{alias}" readonly="readonly"
 		                    placeholder="Default is product name (spaces are replaced by dashes)" />
-		         </th:block>           
 		     </th:block>    
-		     
-		     <th:block th:if="${#authorization.expression('hasAuthority(''Admin'')') || #authorization.expression('hasAuthority(''Editor'')')}">
+		     <th:block th:unless="${isReadOnlyForSalesperson}">
 		         <input type="text" class="form-control" th:field="*{alias}" minlength="3" maxlength="256" 
 		                placeholder="Default is product name (spaces are replaced by dashes)" />
 		     </th:block>
@@ -40,15 +34,14 @@
      <div class="form-group row">
          <label class="col-sm-2 col-form-label">Brand:</label>
          <div class="col-sm-10">
-             <th:block th:if="${#authorization.expression('hasAuthority(''Admin'')') || #authorization.expression('hasAuthority(''Editor'')')}">
+             <th:block th:unless="${isReadOnlyForSalesperson}">
 	             <select th:field="*{brand}" class="form-control" required="required">
 	                 <th:block th:each="brand : ${listBrands}">
 	                     <option th:value="${brand.id}">[[${brand.name}]]</option>    
 	                 </th:block>
 	             </select>
              </th:block>
-             <th:block th:if="${!#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}">
-			     <th:block th:if="${#authorization.expression('hasAuthority(''Salesperson'')')}">
+                 <th:block th:if="${isReadOnlyForSalesperson}">
                      <input type="text" class="form-control" th:value="${product.brand.name}" readonly />
                  </th:block>    
              </th:block>
@@ -59,7 +52,7 @@
          <label class="col-sm-2 col-form-label">Category:</label>
          <div class="col-sm-10">
              <!-- edit mode -->
-             <th:block th:if="${#authorization.expression('hasAuthority(''Admin'')') || #authorization.expression('hasAuthority(''Editor'')')}">
+             <th:block th:unless="${isReadOnlyForSalesperson}">
 	             <th:block th:if="${product.category != null}">
 	                 <select th:field="*{category}" class="form-control" required="required">
 	                     <th:block th:each="category : ${product.brand.categories}">
@@ -74,10 +67,8 @@
 	                 </select>
 	             </th:block>
              </th:block>
-            <th:block th:if="${!#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}">
-			     <th:block th:if="${#authorization.expression('hasAuthority(''Salesperson'')')}">
-                     <input type="text" class="form-control" th:value="${product.category.name}" readonly />
-                 </th:block>    
+             <th:block th:if="${isReadOnlyForSalesperson}">
+                 <input type="text" class="form-control" th:value="${product.category.name}" readonly />
              </th:block>
          </div>
      </div>
@@ -85,13 +76,11 @@
 	 <div class="form-group row">
 	     <label class="col-sm-2 col-form-label">Enabled:</label>
 		 <div class="col-sm-10">
-		     <th:block th:if="${!#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}">
-			     <th:block th:if="${#authorization.expression('hasAuthority(''Salesperson'')')}">
-		             <input type="checkbox" th:field="*{enabled}" disabled="disabled" />
-		         </th:block>
+		     <th:block th:if="${isReadOnlyForSalesperson}">
+		         <input type="checkbox" th:field="*{enabled}" disabled="disabled" />
 		     </th:block>       
 		     
-		     <th:block th:if="${#authorization.expression('hasAuthority(''Admin'')') || #authorization.expression('hasAuthority(''Editor'')')}"> 
+		     <th:block th:unless="${isReadOnlyForSalesperson}">
 		         <input type="checkbox" th:field="*{enabled}" />
 		     </th:block>
 		 </div>
@@ -100,13 +89,11 @@
 	 <div class="form-group row">
 	     <label class="col-sm-2 col-form-label">In Stock:</label>
 		 <div class="col-sm-10">
-		     <th:block th:if="${!#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}">
-			     <th:block th:if="${#authorization.expression('hasAuthority(''Salesperson'')')}">
-		             <input type="checkbox" th:field="*{inStock}" disabled="disabled" />
-		         </th:block>
+		     <th:block th:if="${isReadOnlyForSalesperson}"> 
+		         <input type="checkbox" th:field="*{inStock}" disabled="disabled" />
 		     </th:block>
 		     
-		     <th:block th:if="${#authorization.expression('hasAuthority(''Admin'')') || #authorization.expression('hasAuthority(''Editor'')')}"> 
+		     <th:block th:unless="${isReadOnlyForSalesperson}">
 		         <input type="checkbox" th:field="*{inStock}" />
 		     </th:block>        
 		 </div>
