--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/customers/account_form.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/customers/account_form.html
@@ -1,18 +1,36 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="fragments :: page_head(${pageTitle}, 'none')">
+<head th:replace="fragments :: page_head('Your Account Details', 'none')">
 </head>
 <body>
     <div class="container-fluid">
         <div th:replace="navigation :: header_menu"></div>
+        
         <div class="text-center mt-3">
-            <h2>Customer Registration</h2>
+            <h2>Your Account Details</h2>
         </div>    
         <div>&nbsp;</div>
-        <form th:action="@{/create_customer}" method="post" th:object="${customer}" 
-              style="max-width: 600px; margin: 0 auto" onsubmit="return checkEmailUnique(this);">
+        
+        <form th:action="@{/update_account_details}" method="post" th:object="${customer}" style="max-width: 600px; margin: 0 auto">
+            <input type="hidden" th:field="${customer.id}" />
+            <div th:if="${message != null}" class="alert alert-success text-center">[[${message}]]</div>
+            
             <div class="border border-secondary rounded p-3">
+                <div class="form-group row">
+                    <label class="col-sm-4 col-form-label">Authentication Type:</label>
+                    <div class="col-sm-8">
+                        <input type="text" class="form-control" th:field="*{authenticationType}" readonly="readonly" />
+                    </div>
+                </div>
+            
+                <div class="form-group row">
+                    <label class="col-sm-4 col-form-label">E-mail:</label>
+                    <div class="col-sm-8">
+                        <input type="text" class="form-control" th:field="*{email}" readonly="readonly" />
+                    </div>
+                </div>
+            
                 <div class="form-group row">
                     <label class="col-sm-4 col-form-label">First Name:</label>
                     <div class="col-sm-8">
@@ -29,19 +47,11 @@
                     </div>
                 </div>
                 
-                <div class="form-group row">
-                    <label class="col-sm-4 col-form-label">E-mail:</label>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control" th:field="*{email}"
-                               required="required" maxlength="45" minlength="8" />
-                    </div>
-                </div>
-                
+                <th:block th:if="${customer.authenticationType.name() == 'DATABASE'}">
                 <div class="form-group row">
 			        <label class="col-sm-4 col-form-label">Password:</label>
 			        <div class="col-sm-8">
-				        <input type="password" th:field="*{password}" class="form-control"
-					           required="required" maxlength="15" minlength="6"
+				        <input type="password" th:field="*{password}" class="form-control" maxlength="15" minlength="6"
 					           oninput="checkPasswordMatch(document.getElementById('confirmPassword'))" />
 			        </div>
 		        </div>
@@ -49,12 +59,12 @@
 				<div class="form-group row">
 					<label class="col-sm-4 col-form-label">Re-type Password:</label>
 					<div class="col-sm-8">
-						<input type="password" id="confirmPassword" class="form-control"
-							required="required" maxlength="15" minlength="6" 
+						<input type="password" id="confirmPassword" class="form-control" maxlength="15" minlength="6" 
 							oninput="checkPasswordMatch(this)" />
 					</div>
 				</div>
-
+				</th:block>
+				
 				<div class="form-group row">
 					<label class="col-sm-4 col-form-label">Phone Number:</label>
 					<div class="col-sm-8">
@@ -116,42 +126,20 @@
 				</div>
 
 				<div class="text-center">
-                    <input type="submit" class="btn btn-primary" value="Create Account" />
+                    <input type="submit" class="btn btn-primary" value="Update Account" />
                 </div>
             </div>
         </form>
         
         <div>&nbsp;</div>
-        <div th:replace="fragments :: modal_dialog"></div>
         <div th:replace="navigation :: footer_menu"></div> 
     </div>    
     
 <script type="text/javascript">
-    contextPath = "[[@{/}]]";    
-    
-    function checkEmailUnique(form) {
-		url = contextPath + "customers/check_unique_email";
-		customerEmail = $("#email").val();
-		csrfValue = $("input[name='_csrf']").val();
-		
-		params = {email: customerEmail, _csrf: csrfValue};
-		
-		$.post(url, params, function(response) {
-			if (response == "OK") {
-				form.submit();
-			} else if (response == "Duplicated") {
-				showWarningModal("There is another cusotmer having the email " + customerEmail);
-			} else {
-				showErrorModal("Unknown response from server");
-			}
-		}).fail(function() {
-			showErrorModal("Could not connect to the server");
-		});
-		
-		return false;
-	}	
-</script>    
+	contextPath = "[[@{/}]]";
+</script>
 <script type="text/javascript" th:src="@{/js/common_customer_form.js}"></script>
+
 </body>
 </html>
 
