--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/navigation.html
@@ -56,7 +56,7 @@
 		            <ul class="navbar-nav">						
 						<th:block sec:authorize="isAuthenticated()">
 						<li class="nav-item">
-							<b><a class="nav-link" th:href="@{/customer}" sec:authentication="principal.fullName"></a></b>
+							<b><a class="nav-link" th:href="@{/account_details}" sec:authentication="principal.fullName"></a></b>
 						</li>
 						
 						<li class="nav-item">
