--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/address_book/address_form.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/address_book/address_form.html
@@ -1,39 +1,22 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="fragments :: page_head('Your Account Details', 'none')">
+<head th:replace="fragments :: page_head('Add New Address', 'none')">
 </head>
 <body>
     <div class="container-fluid">
         <div th:replace="navigation :: header_menu"></div>
         <div th:replace="navigation :: search_nav"></div>
-        <div>&nbsp;</div>
-        
         <div class="text-center mt-3">
-            <h2>Your Account Details</h2>
+            <h2>[[${pageTitle}]]</h2>
         </div>    
         <div>&nbsp;</div>
         
-        <form th:action="@{/update_account_details}" method="post" th:object="${customer}" style="max-width: 600px; margin: 0 auto">
-            <input type="hidden" th:field="${customer.id}" />
-            <input type="hidden" name="redirect" th:value="${param.redirect}" />
-            <div th:if="${message != null}" class="alert alert-success text-center">[[${message}]]</div>
+        <form th:action="@{/address_book/save}" method="post" th:object="${address}" style="max-width: 600px; margin: 0 auto">
+            <input type="hidden" th:field="${address.id}" />
+            <input type="hidden" th:field="${address.defaultForShipping}" />
             
             <div class="border border-secondary rounded p-3">
-                <div class="form-group row">
-                    <label class="col-sm-4 col-form-label">Authentication Type:</label>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control" th:field="*{authenticationType}" readonly="readonly" />
-                    </div>
-                </div>
-            
-                <div class="form-group row">
-                    <label class="col-sm-4 col-form-label">E-mail:</label>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control" th:field="*{email}" readonly="readonly" />
-                    </div>
-                </div>
-            
                 <div class="form-group row">
                     <label class="col-sm-4 col-form-label">First Name:</label>
                     <div class="col-sm-8">
@@ -50,24 +33,6 @@
                     </div>
                 </div>
                 
-                <th:block th:if="${customer.authenticationType.name() == 'DATABASE'}">
-                <div class="form-group row">
-			        <label class="col-sm-4 col-form-label">Password:</label>
-			        <div class="col-sm-8">
-				        <input type="password" th:field="*{password}" class="form-control" maxlength="15" minlength="6"
-					           oninput="checkPasswordMatch(document.getElementById('confirmPassword'))" />
-			        </div>
-		        </div>
-
-				<div class="form-group row">
-					<label class="col-sm-4 col-form-label">Re-type Password:</label>
-					<div class="col-sm-8">
-						<input type="password" id="confirmPassword" class="form-control" maxlength="15" minlength="6" 
-							oninput="checkPasswordMatch(this)" />
-					</div>
-				</div>
-				</th:block>
-				
 				<div class="form-group row">
 					<label class="col-sm-4 col-form-label">Phone Number:</label>
 					<div class="col-sm-8">
@@ -87,16 +52,14 @@
 				<div class="form-group row">
 					<label class="col-sm-4 col-form-label">Address Line 2:</label>
 					<div class="col-sm-8">
-						<input type="text" th:field="*{addressLine2}" class="form-control"
-							maxlength="64" />
+						<input type="text" th:field="*{addressLine2}" class="form-control" maxlength="64" />
 					</div>
 				</div>
 
 				<div class="form-group row">
 					<label class="col-sm-4 col-form-label">City:</label>
 					<div class="col-sm-8">
-						<input type="text" th:field="*{city}" class="form-control"
-							maxlength="45" minlength="2" />
+						<input type="text" th:field="*{city}" class="form-control" maxlength="45" minlength="2" />
 					</div>
 				</div>
 
@@ -123,13 +86,12 @@
 				<div class="form-group row">
 					<label class="col-sm-4 col-form-label">Postal Code:</label>
 					<div class="col-sm-8">
-						<input type="text" th:field="*{postalCode}" class="form-control"
-							maxlength="10" minlength="2" />
+						<input type="text" th:field="*{postalCode}" class="form-control" maxlength="10" minlength="2" />
 					</div>
 				</div>
 
 				<div class="text-center">
-                    <input type="submit" class="btn btn-primary" value="Update Account" />
+                    <input type="submit" class="btn btn-primary" value="Save" />
                 </div>
             </div>
         </form>
