--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/navigation.html
@@ -60,7 +60,7 @@
 						</li>
 						
 						<li class="nav-item">
-							<a class="nav-link" th:href="@{/address_book}">Address</a>
+							<a class="nav-link" th:href="@{/address_book}">Address Book</a>
 						</li>
 											
 						<li class="nav-item">
