--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/settings/settings.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/settings/settings.html
@@ -88,7 +88,7 @@
 	
 	$(document).ready(function() {
 		$("#customerVerificationContent").richText();
-		$("#orderConfirmationContent").richText();
+		$("#orderConfirmationContent").richText({height: 400});
 	});
 	
 </script>
