--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/address_book/addresses.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/address_book/addresses.html
@@ -4,18 +4,18 @@
 <head th:replace="fragments :: page_head('Your Address Book', 'none')">
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid" th:with="redirectFromCheckoutPage = ${param.redirect != null && param.redirect[0] == 'checkout'}">
         <div th:replace="navigation :: header_menu"></div>
         <div th:replace="navigation :: search_nav"></div>
         
         <div class="text-center">
             <div>
-                <h2 th:text="${param.redirect != null && param.redirect[0] == 'checkout'} ? 'Choose a Shipping Address' : 'Your Address Book'">
+                <h2 th:text="${redirectFromCheckoutPage} ? 'Choose a Shipping Address' : 'Your Address Book'">
                 </h2>
             </div>
             <div>
                 <h2><a th:unless="${param.redirect}" th:href="@{/address_book/new}">Add New Address</a></h2>
-                <h2><a th:if="${param.redirect != null && param.redirect[0] == 'checkout'}" 
+                <h2><a th:if="${redirectFromCheckoutPage}" 
                        th:href="@{/address_book/new(redirect=checkout)}">Add New Address</a>
                 </h2>
             </div>
@@ -35,7 +35,7 @@
                                 <!--  -->
 								<th:block th:if="${usePrimaryAddressAsDefault}">
 									<span class="text-danger" 
-									      th:text="${param.redirect != null && param.redirect[0] == 'checkout' ? '[Currently Selected]' : '[Default]'}">
+									      th:text="${redirectFromCheckoutPage ? '[Currently Selected]' : '[Default]'}">
 									</span>
 								</th:block>
 								
@@ -44,7 +44,7 @@
 									<a th:if="${param.redirect != null && param.redirect[0] == 'cart'}" 
 									   th:href="@{'/address_book/default/0?redirect=cart'}">[Set as default]
 									</a>
-									<a th:if="${param.redirect != null && param.redirect[0] == 'checkout'}" 
+									<a th:if="${redirectFromCheckoutPage}" 
 									   th:href="@{'/address_book/default/0?redirect=checkout'}">[Choose]
 									</a>
 								</th:block>
@@ -57,7 +57,7 @@
                                        class="fas fa-edit icon-dark" title="Edit your primary address"
                                        th:href="@{/account_details(redirect=address_book)}">
                                     </a>
-                                    <a th:if="${param.redirect != null && param.redirect[0] == 'checkout'}"
+                                    <a th:if="${redirectFromCheckoutPage}"
                                        class="fas fa-edit icon-dark" title="Edit your primary address"
                                        th:href="@{/account_details(redirect=checkout)}">
                                     </a>
@@ -83,7 +83,7 @@
 	                                
 	                                <th:block th:if="${address.defaultForShipping}">
 	                                    <span class="text-danger"
-	                                          th:text="${param.redirect != null && param.redirect[0] == 'checkout' ? '[Currently Selected]' : '[Default]'}">
+	                                          th:text="${redirectFromCheckoutPage ? '[Currently Selected]' : '[Default]'}">
 	                                    </span>
 	                                </th:block>
 	                                
@@ -93,7 +93,7 @@
 	                                       th:href="@{'/address_book/default/' + ${address.id} + '?redirect=cart'}">
 	                                       [Set as default]
 	                                    </a>
-	                                    <a th:if="${param.redirect != null && param.redirect[0] == 'checkout'}" 
+	                                    <a th:if="${redirectFromCheckoutPage}" 
 	                                       th:href="@{'/address_book/default/' + ${address.id} + '?redirect=checkout'}">
 	                                       [Choose]
 	                                    </a>
@@ -106,7 +106,7 @@
 								           class="fas fa-edit icon-dark" title="Edit this address"
 									       th:href="@{'/address_book/edit/' + ${address.id}}">
 									    </a>
-									    <a th:if="${param.redirect != null && param.redirect[0] == 'checkout'}"
+									    <a th:if="${redirectFromCheckoutPage}"
 								           class="fas fa-edit icon-dark" title="Edit this address"
 									       th:href="@{'/address_book/edit/' + ${address.id} + '?redirect=checkout'}">
 									    </a>
