--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/checkout/checkout.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/checkout/checkout.html
@@ -170,6 +170,8 @@
 	    		// người mua chấp thuận thanh toán
 	    		return actions.order.capture().then(function(details) {
 	    			// console.log(details);
+	    			// totalAmount = details.purchase_units[0].amount.value;
+	    			// alert("Order ID: " + orderId + ". Amount: " + totalAmount);
 	    			orderId = details.id;
 	    			validateOrder(orderId);
 	    		});
