--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/orders/order_form_products.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/orders/order_form_products.html
@@ -5,11 +5,13 @@
 		<div id="productList">
 		
 		    <th:block th:each="detail, status : ${order.orderDetails}">
-		        <div class="border rounded p-1">
+		        <div class="border rounded p-1" th:id="'row' + ${status.count}">
 		            <input type="hidden" name="productId" th:value="${detail.product.id}" class="hiddenProductId" />
+		            
 		            <div class="row">
 		                <div class="col-1">
-		                    <div>[[${status.count}]]</div>
+		                    <div class="divCount">[[${status.count}]]</div>	
+					        <div><a class="fas fa-trash icon-dark linkRemove" href="" th:rowNumber="${status.count}"></a></div>	
 		                </div>
 		                <div class="col-3">
 		                    <img th:src="@{${detail.product.mainImagePath}}" class="img-fluid" />
@@ -63,8 +65,9 @@
 		                    </tr>
 		                </table>
 		            </div>
+		        
 		        </div>
-		        <div class="row">&nbsp;</div>
+		        <div th:id="'blank' + ${status.count}" class="row">&nbsp;</div>
 		    </th:block>
 		    
 		</div>
