--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/orders/order_details_modal.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/orders/order_details_modal.html
@@ -34,48 +34,56 @@
 							<input type="text" readonly class="form-control" th:value="${order.id}" />
 						</div>
 					</div>
-					<div class="form-group row">
-						<label class="col-sm-2 col-form-label">Customer:</label>
-						<div class="col-sm-10">
-							<input type="text" readonly class="form-control" th:value="${order.customer.fullName}" />
+					
+					<th:block th:if="${isVisibleForAdminOrSalesperson}">
+						<div class="form-group row">
+							<label class="col-sm-2 col-form-label">Customer:</label>
+							<div class="col-sm-10">
+								<input type="text" readonly class="form-control" th:value="${order.customer.fullName}" />
+							</div>
 						</div>
-					</div>
-					<div class="form-group row">
-						<label class="col-sm-2 col-form-label">Product Cost:</label>
-						<div class="col-sm-10">
-							<div
-								th:replace="fragments :: currency_input(${order.productCost})">Cost</div>
+						<div class="form-group row">
+							<label class="col-sm-2 col-form-label">Product Cost:</label>
+							<div class="col-sm-10">
+								<div
+									th:replace="fragments :: currency_input(${order.productCost})">Cost</div>
+							</div>
 						</div>
-					</div>
-					<div class="form-group row">
-						<label class="col-sm-2 col-form-label">Subtotal:</label>
-						<div class="col-sm-10">
-							<div th:replace="fragments :: currency_input(${order.subtotal})">Subtotal</div>
+						<div class="form-group row">
+							<label class="col-sm-2 col-form-label">Subtotal:</label>
+							<div class="col-sm-10">
+								<div th:replace="fragments :: currency_input(${order.subtotal})">Subtotal</div>
+							</div>
 						</div>
-					</div>
-					<div class="form-group row">
-						<label class="col-sm-2 col-form-label">Shipping Cost:</label>
-						<div class="col-sm-10">
-							<div
-								th:replace="fragments :: currency_input(${order.shippingCost})">Shipping cost</div>
+						<div class="form-group row">
+							<label class="col-sm-2 col-form-label">Shipping Cost:</label>
+							<div class="col-sm-10">
+								<div
+									th:replace="fragments :: currency_input(${order.shippingCost})">Shipping cost</div>
+							</div>
 						</div>
-					</div>
-					<div class="form-group row">
-						<label class="col-sm-2 col-form-label">Tax:</label>
-						<div class="col-sm-10">
-							<div th:replace="fragments :: currency_input(${order.tax})">Tax</div>
+						<div class="form-group row">
+							<label class="col-sm-2 col-form-label">Tax:</label>
+							<div class="col-sm-10">
+								<div th:replace="fragments :: currency_input(${order.tax})">Tax</div>
+							</div>
 						</div>
-					</div>
+					</th:block>
+					
 					<div class="form-group row">
 						<label class="col-sm-2 col-form-label">Total:</label>
 						<div class="col-sm-10">
 							<div th:replace="fragments :: currency_input(${order.total})">Total</div>
 						</div>
 					</div>
-					<div class="form-group row">
-						<label class="col-sm-2 col-form-label"></label>
-						<div class="col-sm-10">TOTAL = Subtotal + Shipping Cost + Tax</div>
-					</div>
+					
+					<th:block th:if="${isVisibleForAdminOrSalesperson}">
+						<div class="form-group row">
+							<label class="col-sm-2 col-form-label"></label>
+							<div class="col-sm-10">TOTAL = Subtotal + Shipping Cost + Tax</div>
+						</div>
+					</th:block>
+					
 					<div class="form-group row">
 						<label class="col-sm-2 col-form-label">Payment Method:</label>
 						<div class="col-sm-10">
@@ -112,20 +120,22 @@
 							<div class="text-wrap">
 								<b>[[${product.name}]]</b>
 							</div>
-							<div>
-								Product Cost:
-								<div th:replace="fragments :: format_currency(${detail.productCost})"></div>
-							</div>
-							<div>
-								Subtotal: [[${detail.quantity}]] X
-								<div th:replace="fragments :: format_currency(${detail.unitPrice})"></div>
-								=
-								<div th:replace="fragments :: format_currency(${detail.subtotal})"></div>
-							</div>
-							<div>
-								Shipping Cost:
-								<div th:replace="fragments :: format_currency(${detail.shippingCost})"></div>
-							</div>
+							<th:block th:if="${isVisibleForAdminOrSalesperson}">
+								<div>
+									Product Cost:
+									<div th:replace="fragments :: format_currency(${detail.productCost})"></div>
+								</div>
+								<div>
+									Subtotal: [[${detail.quantity}]] X
+									<div th:replace="fragments :: format_currency(${detail.unitPrice})"></div>
+									=
+									<div th:replace="fragments :: format_currency(${detail.subtotal})"></div>
+								</div>
+								<div>
+									Shipping Cost:
+									<div th:replace="fragments :: format_currency(${detail.shippingCost})"></div>
+								</div>
+							</th:block>
 						</div>
 					</div>
 				</th:block>
